; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1156.c_send_chmpoker.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1156.c_send_chmpoker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_chmpoker(i32 %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca [12 x i32], align 16
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  store i32 -559034367, i32* %12, align 16
  %13 = load i32, i32* %8, align 4
  %14 = add nsw i32 %13, 12
  %15 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  %16 = getelementptr inbounds i32, i32* %15, i64 4
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* %6, align 4
  %18 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  %19 = call i32 @send(i32 %17, i32* %18, i32 8, i32 0)
  %20 = load i32, i32* %9, align 4
  %21 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  store i32 %20, i32* %21, align 16
  %22 = load i32, i32* %8, align 4
  %23 = add nsw i32 %22, 12
  %24 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  %25 = getelementptr inbounds i32, i32* %24, i64 4
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %10, align 4
  %27 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  %28 = getelementptr inbounds i32, i32* %27, i64 8
  store i32 %26, i32* %28, align 4
  %29 = load i32, i32* %6, align 4
  %30 = getelementptr inbounds [12 x i32], [12 x i32]* %11, i64 0, i64 0
  %31 = call i32 @send(i32 %29, i32* %30, i32 12, i32 0)
  %32 = load i32, i32* %6, align 4
  %33 = load i32*, i32** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @send(i32 %32, i32* %33, i32 %34, i32 0)
  ret void
}

declare dso_local i32 @send(i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
